fixed spacing under post images

--- a/assets/css/custom/blog.css
+++ b/assets/css/custom/blog.css
@@ -245,7 +245,7 @@ nav.site-links a:visited {
   width: 100%;
 }
 .post-header-image {
-  margin-top: 20px;
+  margin: 20px 0 10px;
   transform: rotate(0deg) scale(1);
   transition-duration: 300ms;
 }
